--- a/src/editor/assignment-question/index.scss
+++ b/src/editor/assignment-question/index.scss
@@ -17,6 +17,7 @@
 		position: absolute;
 		top: 1.25rem;
 		left: 1.25rem;
+		z-index: 1;
 		font: normal 400 0.875rem/1.25rem $body-font-family;
 		color: $tertiary-grey;
 
